Heroku invisible hint fix

--- a/public/frontend/src/css/style.less
+++ b/public/frontend/src/css/style.less
@@ -88,6 +88,7 @@ html, body, #root {
   .hook-tooltip;
 
   &.uk-active {
+    opacity: 75%;
     display: block;
   }
 }
